gccida/g1/emit_insns_after
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4599:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4599:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4611:1: error: use of undeclared identifier 'v4'
v4 = first; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4637:1: error: use of undeclared identifier 'v4'
v4 = first; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4642:1: error: use of undeclared identifier 'v4'
v4 = first; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4646:7: error: use of undeclared identifier 'v4'
rtx = v4; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4647:1: error: use of undeclared identifier 'v4'
v4 = v4[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4647:6: error: use of undeclared identifier 'v4'
v4 = v4[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4649:9: error: use of undeclared identifier 'v4'
while ( v4 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/emit-rtl.c:4651:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)after[1].fld[0]; 
                      ^~~~~~~~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_insns_after/src/obj/emit-rtl.o] Error 1
